<resources>
    <string name="app_name">Employee Directory</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="address">Address</string>
    <string name="comapany_details">Comapany Details</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
</resources>