<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.DetailsActivity"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/lightgrey"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutContainer"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:background="@color/lightgrey">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp">
                    <ImageView
                        android:id="@+id/imgProfile"
                        android:layout_gravity="center"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="50dp"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:src="@drawable/img_profile"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/txtName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:textColor="@color/colorTextDark"
                            android:textSize="16sp"
                            android:singleLine="true"
                            android:ellipsize="end"
                            android:paddingEnd="36dp"
                            android:text=""/>
                        <TextView
                            android:id="@+id/txtCompanyName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:textSize="12sp"
                            android:paddingTop="5dp"
                            android:textColor="@color/colorTextDark"
                            android:text=""/>
                    </LinearLayout>


                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgrey"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:weightSum="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/user_name"/>
        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"
            android:text=""/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgrey"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:weightSum="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/email"/>
        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"
            android:text=""/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgrey"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:weightSum="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/phone"/>
        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"
            android:text=""/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgrey"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:weightSum="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/website"/>
        <TextView
            android:id="@+id/txtWeb"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"
            android:text=""/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgrey"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:weightSum="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/address"/>
        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"
            android:text=""/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgrey"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:weightSum="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/comapany_details"/>
        <TextView
            android:id="@+id/txtCompany"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"
            android:text=""/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"/>
    </LinearLayout>



</LinearLayout>